--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
+- GITenberg
 title: O amor offendido, e vingado
 url: http://www.gutenberg.org/ebooks/28640
